tests/snapshots/serde__display_int8array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array([-1])"
---
new Int8Array([
  -0x01,
])
