tests/snapshots/serde__display_int8array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array(new ArrayBuffer(2, { maxByteLength: 10 })).subarray(0, 1)"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new Int8Array(v0, 0, 1)
