tests/snapshots/serde__display_int8array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array([1, 2]).subarray(1, 2)"
---
new Int8Array([
  0x01, 0x02,
]).subarray(1, 2)
