tests/snapshots/serde__display_int8array_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array([1, -2])"
---
new Int8Array([
  0x01, -0x02,
])
