tests/snapshots/serde__display_int8array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array([0, 0, 0])"
---
new Int8Array(3)
