tests/snapshots/serde__display_map_object_key.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[{ a: true }, 1]])"
---
new Map([
  [{
    "a": true,
  }, 1],
])
