tests/snapshots/serde__display_map_object_key_and_value.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[{ a: true }, { b: true }]])"
---
new Map([
  [{
    "a": true,
  }, {
    "b": true,
  }],
])
