tests/snapshots/serde__display_map_object_value.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[1, { b: true }]])"
---
new Map([
  [1, {
    "b": true,
  }],
])
